--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-keepalive": "^1.0.0",
     "socket.io": "^1.4.6"
   }
 }
