--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "2048"]
 	path = 2048
 	url = https://github.com/gabrielecirulli/2048.git
+[submodule "reinforcejs"]
+	path = reinforcejs
+	url = https://github.com/karpathy/reinforcejs.git
